Inreased interaction area for logo and corrected service flip align

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -326,6 +326,10 @@ section {
   z-index: 1;
 }
 
+#footer .footer-top .footer-contact > a {
+  padding: 5px;
+}
+
 #footer .footer-top .footer-contact .footer-logo {
   max-width: 70%;
 }
